add supervisor names and event status
